# js-wacz

./: .gitignore  .npmignore  LICENSE  README.md  WACZ.js  cli.js  cli.test.js  computeSHA256.js  constants.js  detectPagesInWARC.js  index.js  index.test.js  indexWARC.js  package-lock.json  package.json  test-and-publish.sh  types.js
.github/workflows/: lint.yml  test.yml
.services/publish/: README.md  run.sh
.services/signer/: README.md  pyproject.toml  requirements.txt  run.sh
__prototyping/: index.js
__prototyping/workers/: indexWARC.js
fixtures/: authsign-response.json
fixtures/cdxj/: invalid.txt  valid.cdxj  valid2.cdx
fixtures/logs/: invalid.md
fixtures/pages/: invalid.jsonl  invalidName.jsonl
services/signer/: requirements.txt
utils/: assertions.js  assertions.test.js  packageInfo.js
workers/: detectPages.js  indexWARC.js  indexWARC.test.js
